# codema-dev-projects

electricity-grid-capacity/: README.md  cluster_lv_substations.py  cluster_lv_substations_via_network.py  link_lv_substations_to_electoral_districts.py  pipeline.yaml  pyproject.toml  tasks.py
electricity-grid-capacity/ops/: cluster.py  io.py
extract-dublin-nta-road-link-emissions/: environment.yml  pipeline.yaml
heat-pumps/: README.md  environment.yml  hooks.py  map_heat_pump_viability.py  pipeline.yaml  tasks.py
heritage-buildings/: environment.yml  map_percentage_heritage_zones.py  pipeline.yaml
lv-grid-capacity/: cluster_lv_substations.py  environment.yml  pipeline.yaml
lv-grid-capacity/ops/: convert.py  join_nearest.py
