[tool.poetry]
name = "ops"
version = "0.1.0"
description = "Helper functions for electricity grid data wrangling & exploration"
authors = ["Rowan Molony <rowan.molony@codema.ie>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
